--- a/Udemy/Curso HTML, CSS, JS/CSS3/fonts.html
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/fonts.html
@@ -8,7 +8,20 @@
 </head>
 
 <body>
-
+    <h1>Este es mi nuevo texto</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae quibusdam velit soluta dolorem, quaerat
+        provident sunt? Quos, nisi, repellendus voluptatum atque, odio quam consectetur aut esse distinctio sunt autem?
+    </p>
+    <hr>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae quibusdam velit soluta dolorem, quaerat
+        provident sunt? Quos, nisi, repellendus voluptatum atque, odio quam consectetur aut esse distinctio sunt autem?
+    </p>
+    <hr>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae quibusdam velit soluta dolorem, quaerat
+        provident sunt? Quos, nisi, repellendus voluptatum atque, odio quam consectetur aut esse distinctio sunt autem?
+    </p>
 </body>
 
 </html>
