--- a/Udemy/Curso HTML, CSS, JS/CSS3/fonts.html
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/fonts.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/fonts.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300&family=Oswald:wght@200&display=swap"
+            rel="stylesheet">
+    </head>
 
-<body>
-    <h1>Este es mi nuevo texto</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae quibusdam velit soluta dolorem, quaerat
-        provident sunt? Quos, nisi, repellendus voluptatum atque, odio quam consectetur aut esse distinctio sunt autem?
-    </p>
-    <hr>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae quibusdam velit soluta dolorem, quaerat
-        provident sunt? Quos, nisi, repellendus voluptatum atque, odio quam consectetur aut esse distinctio sunt autem?
-    </p>
-    <hr>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae quibusdam velit soluta dolorem, quaerat
-        provident sunt? Quos, nisi, repellendus voluptatum atque, odio quam consectetur aut esse distinctio sunt autem?
-    </p>
-    <p>hola</p>
-</body>
+    <body>
+        <h1>Este es mi nuevo texto</h1>
+        <div id="typeFonts">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut
+                blanditiis veritatis inventore minus, rerum
+                laborum ratione amet explicabo voluptatibus laudantium. Quam
+                tempora temporibus sint itaque voluptates
+                distinctio possimus eum.
+            </p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut
+                blanditiis veritatis inventore minus, rerum
+                laborum ratione amet explicabo voluptatibus laudantium. Quam
+                tempora temporibus sint itaque voluptates
+                distinctio possimus eum.
+            </p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut
+                blanditiis veritatis inventore minus, rerum
+                laborum ratione amet explicabo voluptatibus laudantium. Quam
+                tempora temporibus sint itaque voluptates
+                distinctio possimus eum.
+            </p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut
+                blanditiis veritatis inventore minus, rerum
+                laborum ratione amet explicabo voluptatibus laudantium. Quam
+                tempora temporibus sint itaque voluptates
+                distinctio possimus eum.
+            </p>
+
+        </div>
+
+    </body>
 
 </html>
