--- a/Udemy/Curso HTML, CSS, JS/CSS3/colores.html
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/colores.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/colores.css">
 </head>
 
 <body>
-    <h1>Este es mi nuevo título</h1>
+    <div></div>
+
 </body>
 
 </html>
