--- a/Udemy/Curso HTML, CSS, JS/CSS3/tabla.html
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/tabla.html
@@ -26,7 +26,80 @@
                 <td>Alejandro</td>
                 <td>Quintero</td>
                 <td>dquinte7@gmail.com</td>
-                <td><span class="fa fa-info-circle"></span><span class="fa fa-edit"><span class="fa fa-trash-alt"></span></span></td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>123456</td>
+                <td>Alejandro</td>
+                <td>Quintero</td>
+                <td>dquinte7@gmail.com</td>
+                <td><span class="fa fa-info-circle"></span>
+                    <span class="fa fa-edit"></span>
+                    <span class="fa fa-trash-alt"></span>
+                </td>
             </tr>
         </tbody>
     </table>
