--- a/Udemy/Curso HTML, CSS, JS/CSS3/grid/grid1.html
+++ b/Udemy/Curso HTML, CSS, JS/CSS3/grid/grid1.html
@@ -14,7 +14,8 @@
         <h1>FUNDAMENTOS DE CSS GRID</h1>
     </header>
     <div class="grid">
-        <div>1</div>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum fugiat quidem cupiditate sequi in a harum non
+            vitae, autem totam amet voluptatum ratione cumque architecto vel ipsam tenetur ipsum quia.</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
